package com.directi.training.isp.exercise_refractored;

public interface Door
{
    void lock();

    void unlock();

    void open();

    void close();

}
